[gd_scene load_steps=16 format=2]

[ext_resource path="res://script/game_panel.gd" type="Script" id=1]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://script/strength.gd" type="Script" id=3]
[ext_resource path="res://theme/close_button_theme.tres" type="Theme" id=4]
[ext_resource path="res://theme/hidden_button_theme.tres" type="Theme" id=5]
[ext_resource path="res://theme/fonts/Boku2-Regular.otf" type="DynamicFontData" id=6]
[ext_resource path="res://theme/fonts/AnonymousPro-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 640, 0 ) ]
}

[sub_resource type="Animation" id=29]
resource_name = "fold"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 640, 360 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=28]
resource_name = "unfold"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ Vector2( 640, 360 ), Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=25]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 7 )
fallback/0 = ExtResource( 6 )

[sub_resource type="ButtonGroup" id=21]

[sub_resource type="DynamicFont" id=26]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 7 )
fallback/0 = ExtResource( 6 )

[sub_resource type="ButtonGroup" id=23]

[sub_resource type="ButtonGroup" id=24]

[node name="GamePanel" type="Control"]
margin_left = 640.0
margin_right = 1920.0
margin_bottom = 720.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fold" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 27 )
anims/fold = SubResource( 29 )
anims/unfold = SubResource( 28 )

[node name="BackGround" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -270.0
margin_right = 350.0
margin_bottom = 270.0
color = Color( 0.317647, 0.454902, 1, 0.705882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackSide" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -330.0
margin_top = -205.0
margin_right = -10.0
margin_bottom = -48.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BlackSide"]
margin_right = 320.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 25 )
text = "BlackSide"
align = 1

[node name="Player" type="HBoxContainer" parent="BlackSide"]
margin_top = 59.0
margin_right = 320.0
margin_bottom = 106.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Human" type="Button" parent="BlackSide/Player"]
margin_right = 155.0
margin_bottom = 47.0
size_flags_horizontal = 3
toggle_mode = true
pressed = true
group = SubResource( 21 )
text = "Player"

[node name="AI" type="Button" parent="BlackSide/Player"]
margin_left = 165.0
margin_right = 320.0
margin_bottom = 47.0
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 21 )
text = "Computer"

[node name="HBox" type="HBoxContainer" parent="BlackSide"]
margin_top = 116.0
margin_right = 320.0
margin_bottom = 163.0
custom_constants/separation = 10

[node name="PlaceHoler" type="Button" parent="BlackSide/HBox"]
margin_right = 155.0
margin_bottom = 47.0
focus_mode = 0
size_flags_horizontal = 3
theme = ExtResource( 5 )
enabled_focus_mode = 0

[node name="StrengthOption" type="OptionButton" parent="BlackSide/HBox"]
margin_left = 165.0
margin_right = 320.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "Medium"
align = 1
items = [ "Weak", null, false, 0, null, "Medium", null, false, 1, null, "Strong", null, false, 2, null ]
selected = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WhiteSide" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -205.0
margin_right = 330.0
margin_bottom = -48.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WhiteSide"]
margin_right = 320.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 26 )
text = "WhiteSide"
align = 1

[node name="Player" type="HBoxContainer" parent="WhiteSide"]
margin_top = 59.0
margin_right = 320.0
margin_bottom = 106.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Human" type="Button" parent="WhiteSide/Player"]
margin_right = 155.0
margin_bottom = 47.0
size_flags_horizontal = 3
toggle_mode = true
pressed = true
group = SubResource( 23 )
text = "Player"

[node name="AI" type="Button" parent="WhiteSide/Player"]
margin_left = 165.0
margin_right = 320.0
margin_bottom = 47.0
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 23 )
text = "Computer"

[node name="HBox" type="HBoxContainer" parent="WhiteSide"]
margin_top = 116.0
margin_right = 320.0
margin_bottom = 163.0
custom_constants/separation = 10

[node name="PlaceHoler" type="Button" parent="WhiteSide/HBox"]
margin_right = 155.0
margin_bottom = 47.0
focus_mode = 0
size_flags_horizontal = 3
theme = ExtResource( 5 )
enabled_focus_mode = 0

[node name="StrengthOption" type="OptionButton" parent="WhiteSide/HBox"]
margin_left = 165.0
margin_right = 320.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "Medium"
align = 1
items = [ "Weak", null, false, 0, null, "Medium", null, false, 1, null, "Strong", null, false, 2, null ]
selected = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WhoFirst" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -261.0
margin_top = 100.0
margin_right = 261.0
margin_bottom = 147.0
size_flags_horizontal = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Black" type="Button" parent="WhoFirst"]
margin_right = 256.0
margin_bottom = 47.0
size_flags_horizontal = 3
toggle_mode = true
pressed = true
group = SubResource( 24 )
text = "BlackFirst"

[node name="White" type="Button" parent="WhoFirst"]
margin_left = 266.0
margin_right = 522.0
margin_bottom = 47.0
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 24 )
text = "WhiteFirst"

[node name="Start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -170.0
margin_right = 100.0
margin_bottom = -123.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 298.0
margin_top = 70.0
margin_right = 353.0
margin_bottom = 159.0
focus_mode = 0
theme = ExtResource( 4 )
enabled_focus_mode = 0
text = "x"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="Fold" to="." method="_on_Fold_animation_finished"]
[connection signal="animation_started" from="Fold" to="." method="_on_Fold_animation_started"]
[connection signal="pressed" from="BlackSide/Player/Human" to="BlackSide/HBox/StrengthOption" method="_on_Human_pressed"]
[connection signal="pressed" from="BlackSide/Player/AI" to="BlackSide/HBox/StrengthOption" method="_on_AI_pressed"]
[connection signal="pressed" from="WhiteSide/Player/Human" to="WhiteSide/HBox/StrengthOption" method="_on_Human_pressed"]
[connection signal="pressed" from="WhiteSide/Player/AI" to="WhiteSide/HBox/StrengthOption" method="_on_AI_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Cancel" to="." method="_on_Close_pressed"]
